# dm_cc

./: .env.example  .gitignore  README.md  interactive_cli.py  map.txt  pyproject.toml
docs/: 18_opencode_multi_agent_design.md  19_multi_agent_implementation_plan.md  20_opencode_todo_system_analysis.md  21_dm_cc_todo_implementation_plan.md  22_opencode_compact_system_analysis.md  22_tui_dual_pane_design.md  23_dm_cc_compact_implementation_plan.md  23_tui_phase1_implementation.md  24_tui_window_fix.md  25_tui_tests.md  26_tui_debug.md  bash_tool_implementation.md  edit_diff_implementation.md  edit_tool_design.md  lsp_design.md  lsp_implementation.md  lsp_src.md  multi_agent_phase1.md  opencode_debug.md  opencode_tools.md  plan.md  read_tool_design.md  session_logger_design.md  skill_system_design.md  skill_system_tutorial.md  system_reminder_design.md  tui_implement_plan.md  tui_task_breakdown.md  write_vs_edit.md
src/dm_cc/: __init__.py  agent.py  cli.py  config.py  hello_world.py  llm.py  question.py  session_logger.py
src/dm_cc/agents/: __init__.py  config.py
src/dm_cc/core/: __init__.py  message.py  plan.py  reminders.py  skill.py  todo.py
src/dm_cc/lsp/: __init__.py
src/dm_cc/prompt/: __init__.py  builder.py
src/dm_cc/tools/: __init__.py  base.py  bash.py  bash.txt  edit.py  edit.txt  glob.py  plan-enter.txt  plan-exit.txt  plan_enter.py  plan_exit.py  read.py  read.txt  skill.py  skill.txt  write.py  (+4 more)
tests/: prompt_dbg.py  test_agent_integration.py  test_agents_config.py
tests/tools/: tool_edit_it.py  tool_glob_it.py  tool_read_it.py  tool_write_it.py
