[project]
name = "dm-cc"
version = "0.1.0"
description = "DeepClone Coding Agent - A minimal Python coding assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.79.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyright>=1.1.408",
    "rich>=14.3.2",
    "tree-sitter>=0.25.2",
    "tree-sitter-languages>=1.10.2",
    "typer>=0.23.0",
]

[project.scripts]
dmcc = "dm_cc.cli:app"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
